@@ -134,7 +134,7 @@ public class MessageTemplateController {
     public void deleteByIds(@PathVariable("id") String id) {
         if (StrUtil.isNotBlank(id)) {
             List<Long> idList =
-                    Arrays.stream(id.split(StrUtil.COMMA)).map(Long::valueOf).collect(Collectors.toList());
+                    Arrays.stream(id.split(StrUtil.COMMA)).map(Long::valueOf).toList();
             messageTemplateService.deleteByIds(idList);
         }
     }
